task 9 done - sequenced collections