@@ -604,11 +604,11 @@ public final class TransactionUtil implements Status {
 
     protected static void pushSuspendedTransaction(Transaction t) {
         List<Transaction> tl = getSuspendedTxStack();
-        // REFACTOR: Use sequenced collection method instead
-        tl.add(0, t);
+        // REFACTO: Use sequenced collection method instead
+        tl.addFirst(t);
         List<Exception> stls = getSuspendedTxLocationsStack();
-        // REFACTOR: Use sequenced collection method instead
-        stls.add(0, new Exception("TX Suspend Location"));
+        // REFACTO: Use sequenced collection method instead
+        stls.addFirst(new Exception("TX Suspend Location"));
         // save the current transaction start stamp
         pushTransactionStartStamp(t);
     }
@@ -620,11 +620,11 @@ public final class TransactionUtil implements Status {
             popTransactionStartStamp();
             List<Exception> stls = suspendedTxLocationStack.get();
             if (UtilValidate.isNotEmpty(stls)) {
-                // REFACTOR: Use sequenced collection method instead
-                stls.remove(0);
+                // REFACTO: Use sequenced collection method instead
+                stls.removeFirst();
             }
-            // REFACTOR: Use sequenced collection method instead
-            return tl.remove(0);
+            // REFACTO: Use sequenced collection method instead
+            return tl.removeFirst();
         }
         return null;
     }
@@ -635,8 +635,8 @@ public final class TransactionUtil implements Status {
             tl.remove(t);
             List<Exception> stls = suspendedTxLocationStack.get();
             if (UtilValidate.isNotEmpty(stls)) {
-                // REFACTOR: Use sequenced collection method instead
-                stls.remove(0);
+                // REFACTO: Use sequenced collection method instead
+                stls.removeFirst();
             }
             popTransactionStartStamp(t);
         }
@@ -652,8 +652,8 @@ public final class TransactionUtil implements Status {
             el = new LinkedList<>();
             transactionBeginStackSave.set(el);
         }
-        // REFACTOR: Use sequenced collection method instead
-        el.add(0, e);
+        // REFACTO: Use sequenced collection method instead
+        el.addFirst(e);
 
         if (Debug.infoOn()) {
             Long curThreadId = Thread.currentThread().threadId();
@@ -662,8 +662,8 @@ public final class TransactionUtil implements Status {
                 ctEl = new LinkedList<>();
                 allThreadsTransactionBeginStackSave.put(curThreadId, ctEl);
             }
-            // REFACTOR: Use sequenced collection method instead
-            ctEl.add(0, e);
+            // REFACTO: Use sequenced collection method instead
+            ctEl.addFirst(e);
         }
     }
 
@@ -673,15 +673,15 @@ public final class TransactionUtil implements Status {
             Long curThreadId = Thread.currentThread().threadId();
             List<Exception> ctEl = allThreadsTransactionBeginStackSave.get(curThreadId);
             if (UtilValidate.isNotEmpty(ctEl)) {
-                // REFACTOR: Use sequenced collection method instead
-                ctEl.remove(0);
+                // REFACTO: Use sequenced collection method instead
+                ctEl.removeFirst();
             }
         }
         // then do the more reliable ThreadLocal one
         List<Exception> el = transactionBeginStackSave.get();
         if (UtilValidate.isNotEmpty(el)) {
-            // REFACTOR: Use sequenced collection method instead
-            return el.remove(0);
+            // REFACTO: Use sequenced collection method instead
+            return el.removeFirst();
         }
         return null;
     }
@@ -809,15 +809,15 @@ public final class TransactionUtil implements Status {
             el = new LinkedList<>();
             setRollbackOnlyCauseSave.set(el);
         }
-        // REFACTOR: Use sequenced collection method instead
-        el.add(0, e);
+        // REFACTO: Use sequenced collection method instead
+        el.addFirst(e);
     }
 
     private static RollbackOnlyCause popSetRollbackOnlyCauseSave() {
         List<RollbackOnlyCause> el = setRollbackOnlyCauseSave.get();
         if (UtilValidate.isNotEmpty(el)) {
-            // REFACTOR: Use sequenced collection method instead
-            return el.remove(0);
+            // REFACTO: Use sequenced collection method instead
+            return el.removeFirst();
         }
         return null;
     }
